* FIXED: #CONREF attribute handling in elements with declared content
  (CDATA/RCDATA).  Richard O'Keefe.

SWI-Prolog VERSION 5.0.10
=========================

* FIXED: properly handle elements that have only an <!ATTLIST declaration
  but no <!ELEMENT declaration.  (C. M. Sperberg-McQueen).

* FIXED: handle CDATA inside elements with content-type ANY
  (C. M. Sperberg-McQueen).

* MODIFIED: silently ignore attempts to redefine entity declarations.
  Richard O'Keefe.

* FIXED: skip [] for detection of nesting inside literal values and fix
  handling of [] in the <!DOCTYPE xxx [...]> declaration.  Richard O'Keefe.

* MODIFIED/ADDED: qualify_attributes option for xmlns mode.  Default is
  now *not* to qualify attributes.

* FIXED: Handle elements inside shorttag values.  Thanks Richard O'Keefe
  for providing a clear description how to handle this.

SWI-Prolog VERSION 5.0.9
========================

* FIXED: correct handling of content_length(Len) option (was reading one
  character too many).  Oops, normal reading was broken.  Fixed.

* FIXED: Correctly handle marked sections ending in ]]]> rather than ]]>
  Spotted by Adrian Boyko.

* ADDED: xml_quote_attribute/2 and xml_quote_cdata/2, providing simple
  quote-support.

* FIXED: parse(content) option to the parser (multiple bugs) required for
  process_rdf/3 (Girish Padmalayam).

* FIXED: dtd2pl: printing of NAMEOF and NMTOKEN attributes
  (Joseph Wayne Norton).

* FIXED: load_structure/3 to pass doctype(_) to the correct place.

* ADDED: space(sgml) option.  Was documented but omitted.


SWI-Prolog VERSION 4.0.11
=========================

* MODIFIED: When processing non-validated data in space-preserve mode, emit
  ALL blank data (Richard O'Keefe).

* FIXED: close file after reading DTD from a file.  (Anjo Anjewierden)

* FIXED: handling of (a) +(b) element declaraction (Richard O'Keefe)

* ADDED: Warning when redefining (parameter) entities.

* ENHANCED/FIXED: Process entities refering to files directly.  This