@@ -1,0 +1,2 @@
+[element(foo, [bar='10'], [])].
+[].
